--- a/main.css
+++ b/main.css
@@ -204,6 +204,14 @@ section .text1 a:hover{
         
 
 }
+#sec2 .box:hover{
+    transform: scale(1.1);
+    transition: transform 1s ease;
+    cursor: pointer;
+     animation-timing-function: cubic-bezier(0.8, 0.05, 0.2, 0.95);
+    
+
+}
 .head4{
     background-color: #f4f2ed;
     height: 200px;
