--- a/main.css
+++ b/main.css
@@ -539,6 +539,8 @@ form button{
         width: 120px;
     }
     nav ul{
+        margin-top: 15px;
+        padding: 15px;
         flex-direction: column;
         gap: 20px;
         position: relative;
