Refactor main.css for improved styling and layout

--- a/main.css
+++ b/main.css
@@ -552,6 +552,12 @@ form button{
     body{
         width: fit-content;
     }
+    .header{
+        height: 70vh;
+    }
+    .back{
+        height: 70vh;
+    }
     nav img{
         width: 60px;
         height: 60px;
@@ -694,4 +700,5 @@ form button{
         text-align: start;
         font-size: 14px;
     }
+
 }
